# PythonBasics

./: README.md
Module_00/ex00/: answers.txt  requirements.txt
Module_00/ex01/: exec.py
Module_00/ex02/: whois.py
Module_00/ex03/: count.py
Module_00/ex04/: operations.py
Module_00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
Module_00/ex06/: recipe.py
Module_00/ex07/: filterwords.py
Module_00/ex08/: sos.py
Module_00/ex09/: guess.py
Module_01/ex00/: book.py  recipe.py  test.py
Module_01/ex01/: game.py
Module_01/ex02/: test.py  vector.py
Module_01/ex03/: generator.py
Module_01/ex04/: eval.py
Module_01/ex05/: the_bank.py
Module_02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
Module_02/ex01/: main.py
Module_02/ex02/: logger.py
Module_02/ex03/: csvreader.py  main.py
Module_02/ex04/: README.md  build.sh  setup.cfg  setup.py
Module_02/ex04/my_minipack/: progress.py
