[metadata]
name = my_minipack
version = 0.0.1
description = My package description
long_description = file: README.md, LICENSE.txt
keywords = one, two
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
install_requires =
    requests
    importlib-metadata; python_version<"3.8"

[options.package_data]
* = *.txt, *.md

[options.entry_points]
console_scripts =
    executable-name = my_package.module:function

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*